@@ -1,0 +1,25 @@
+scene.file = scenes/albedo/luxball-albedo.scn
+film.width = 800
+film.height = 800
+##
+#path.albedospecular.type = ONLY_REFLECT
+path.albedospecular.type = REFLECT_TRANSMIT
+path.albedospecular.glossinessthreshold = 0.05
+##
+# Film image pipeline plug-ins
+film.imagepipelines.0.0.type = GAMMA_CORRECTION
+film.imagepipelines.0.0.value = 2.2
+film.imagepipelines.1.0.type = INTEL_OIDN
+film.imagepipelines.1.1.type = GAMMA_CORRECTION
+film.imagepipelines.1.1.value = 2.2
+##
+film.outputs.1.type = RGB_IMAGEPIPELINE
+film.outputs.1.index = 0
+film.outputs.1.filename = normal.png
+film.outputs.2.type = RGB_IMAGEPIPELINE
+film.outputs.2.index = 1
+film.outputs.2.filename = denoised.png
+film.outputs.3.type = ALBEDO
+film.outputs.3.filename = ALBEDO.exr
+film.outputs.4.type = AVG_SHADING_NORMAL
+film.outputs.4.filename = AVG_SHADING_NORMAL.exr
